# dlss-compositor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  requirements.txt
.github/workflows/: build-release.yml
.sisyphus/: boulder.json  dlss-compositor.md
.sisyphus/drafts/: dlss-frame-generation.md
.sisyphus/evidence/: task-10-args-builder.txt  task-7-no-rr-refs.txt  task-8-roundtrip.txt
.sisyphus/notepads/custom-scale-blender-ext-electron-gui/: learnings.md  problems.md
.sisyphus/notepads/dlss-compositor/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/dlss-frame-generation/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/dlss-sr-fix/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/rr-to-sr-refactor/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: custom-scale-blender-ext-electron-gui.md  dlss-compositor.md  dlss-frame-generation.md  dlss-sr-fix.md  rr-to-sr-refactor.md  rrfg-pipeline-and-performance.md
blender/: aov_export_preset.py  export_camera_data.py
blender/dlss_compositor_aov/: __init__.py  blender_manifest.toml
docs/: build_guide.md  dlss_input_spec.md  usage_guide.md
gui/: electron.vite.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  qa-task-14.cjs  tailwind.config.js  tsconfig.json
gui/electron/: cli-args.ts  ipc-channels.ts  main.ts  preload.ts  process-manager.ts  progress-parser.ts  settings-store.ts
gui/src/: App.tsx  index.css
gui/src/components/: .gitkeep  AdvancedSettings.tsx  BasicSettings.tsx  ExePathConfig.tsx  InputOutputPanel.tsx  Layout.tsx  ProcessingView.tsx  utils.ts
gui/src/hooks/: .gitkeep  useProcessing.ts
gui/src/ipc/: channels.ts  index.ts
gui/src/state/: config-store.ts  processing-store.ts
gui/src/types/: dlss-config.ts  index.ts  window.d.ts
gui/tests/: app-launch.spec.ts  real-processing.spec.ts  screenshot-evidence.spec.ts  settings-flow.spec.ts  validation.spec.ts
scripts/: package-release.ps1
src/: main.cpp
src/cli/: cli_parser.cpp  cli_parser.h  config.h
src/core/: camera_data_loader.cpp  camera_data_loader.h  channel_mapper.cpp  channel_mapper.h  exr_reader.cpp  exr_reader.h  exr_writer.cpp  exr_writer.h  logger.cpp  logger.h  mv_converter.cpp  mv_converter.h
src/dlss/: dlss_fg_processor.cpp  dlss_fg_processor.h  dlss_rr_processor.cpp  dlss_rr_processor.h  dlss_sr_processor.cpp  dlss_sr_processor.h  ngx_wrapper.cpp  ngx_wrapper.h
src/gpu/: lut_processor.cpp  lut_processor.h  pq_transfer_processor.cpp  pq_transfer_processor.h  texture_pipeline.cpp  texture_pipeline.h  texture_pool.cpp  texture_pool.h  vulkan_context.cpp  vulkan_context.h
src/pipeline/: async_exr_writer.cpp  async_exr_writer.h  frame_prefetcher.cpp  frame_prefetcher.h  sequence_processor.cpp  sequence_processor.h
src/shaders/: apply_lut.comp  pq_transfer.comp
src/ui/: app.cpp  app.h  image_viewer.cpp  image_viewer.h  settings_panel.cpp  settings_panel.h
test_out/: frame_0001.exr  frame_0002.exr  frame_0003.exr  frame_0004.exr  frame_0005.exr
tests/: CMakeLists.txt  generate_fixtures.py  test_camera_data_loader.cpp  test_channel_mapper.cpp  test_cli.cpp  test_dlss_fg_processor.cpp  test_dlss_rr_processor.cpp  test_e2e.py  test_exr_reader.cpp  test_frame_prefetcher.cpp  test_integration.cpp  test_mv_converter.cpp  test_scaffold.cpp  test_sequence_processor.cpp  test_texture_pipeline.cpp  test_texture_pool.cpp  test_validator.py
tests/fixtures/: README.md  camera.json  missing_channels_64x64.exr  reference_64x64.exr
tests/fixtures/sequence/: frame_0002.exr  frame_0003.exr  frame_0004.exr  frame_0005.exr
tools/: exr_validator.py  generate_aces2_lut.py  test_roundtrip.py
